# junes

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml  setup.py
.jules/: bolt.md
.kiro/specs/jules-cli-tool/: .config.kiro  design.md  requirements.md  tasks.md
docs/: SKILL.md
jules_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  constants.py  formatter.py
junes/: __init__.py  __main__.py  cli.py  client.py  config.py  constants.py  exceptions.py  formatter.py
tests/: __init__.py  test_activities_commands.py  test_agent_commands.py  test_cli.py  test_cli_properties.py  test_client.py  test_client_properties.py  test_config.py  test_config_command.py  test_config_properties.py  test_constants.py  test_exceptions.py  test_formatter.py  test_formatter_properties.py  test_help_properties.py  test_help_system.py  test_performance.py  test_sessions_commands.py  test_sessions_properties.py  test_sources_command.py  test_verbose_mode.py  test_verbose_properties.py
