[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "junes"
version = "2.0.0"
description = "junes: the Jules CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "fanioz", email = "1700770+fanioz@users.noreply.github.com"}
]
keywords = ["junes", "jules", "cli", "api", "rest", "anthropic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "requests>=2.28.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.50.0",
    "responses>=0.23.0",
]

[project.scripts]
junes = "junes.cli:cli"

[project.urls]
Homepage = "https://github.com/fanioz/jules-cli"
Repository = "https://github.com/fanioz/jules-cli"

[tool.setuptools]
packages = ["junes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=junes --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["junes"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85
